# aa_audio_device

./: .gitignore  CMakeLists.txt  README.md
examples/info/: info.cpp
examples/sine/: sine.cpp
include/: aa.h  aa_types.h  global.hpp
src/: lib.cpp
